fix(squad): fixing layout issues

--- a/DopeSquad/DopeSquad/Features/HeroesList/View/ReusableCells/HeroTableViewCell.xib
+++ b/DopeSquad/DopeSquad/Features/HeroesList/View/ReusableCells/HeroTableViewCell.xib
@@ -24,7 +24,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="LCa-lF-sx8">
                                 <rect key="frame" x="16" y="29.5" width="351" height="44"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pMq-RZ-lD1">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pMq-RZ-lD1">
                                         <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="Dkh-qV-fAR"/>
