--- a/DopeSquad/DopeSquad/Features/HeroesList/View/ReusableCells/SquadMemberCollectionViewCell.xib
+++ b/DopeSquad/DopeSquad/Features/HeroesList/View/ReusableCells/SquadMemberCollectionViewCell.xib
@@ -18,7 +18,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="64" height="104"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Cda-Cw-1kk">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Cda-Cw-1kk">
                         <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Cda-Cw-1kk" secondAttribute="height" id="T3c-RC-v4J"/>
